package com.example.simpletodosmanager.model;

/**
 * @Author Anthony HE, anthony.zj.he@outlook.com
 * @Date 31/1/2023
 * @Description:
 *
 * when multiple users collaborate on one /ntodo item, one or more people can be the admin
 * when one user is working on one /ntodo item, he/she is the admin
 */
public enum  RoleName {
    USER,
    ADMIN
}
