@startuml

Role o-- RoleName
User - Role
TODOItem -- User
TODOItem o- Status

enum RoleName{
    USER
    ADMIN
}

enum Status{
    DONE
    OVERDUE
    TODO
}


class Role{
<plain>- Long id;
<plain>- RoleName roleName;
<plain>- Set<User> users;
}

class User{
<plain>- Long id;
<plain>- String name;
<plain>- String password;
<plain>- List<TODOItem> todoItemOwned;
<plain>- Set<Role> roles;

}

class TODOItem{
<plain>- Long id;
<plain>- String itemName;
<plain>- String Description;
<plain>- LocalDate dueDate;
<plain>- Status status;
<plain>- String creatorName;
<plain>- User owner;

}
@enduml